--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,10 +1,9 @@
-
-span + span {
-    margin-left: 20px;
-}
-
 .infos {
     margin: auto;
     text-align: center;
     color:#9d9d9d;
+}
+
+.infos span {
+	margin-right: 2vw;
 }
