Include Consolas font css from googleapis

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,6 @@
+/* Fonts */
+@import url(http://fonts.googleapis.com/css?family=Consolas:400,700,400italic);
+
 .infos {
     margin: auto;
     text-align: center;
