--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,3 @@
-/* Fonts */
-@import url(http://fonts.googleapis.com/css?family=Consolas:400,700,400italic);
-
 .infos {
     margin: auto;
     text-align: center;
@@ -17,7 +14,7 @@ pre, code {
 	-moz-hyphens: none;
 	overflow:scroll;
 	width: auto;
-	font-family: 'Consolas';
+	font-family: 'Consolas', Menlo, Monaco, 'Courier New', monospace;
 }
 
 pre:hover, code:hover {
