--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: True
 ---
 
 <div class="post">
@@ -10,3 +11,4 @@ layout: default
 
 {% assign post = {{page}} %}
 {% include previous_posts.html %}
+{% include comments.html %}
