Fix warning in post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,6 @@ comments: True
   {{ content }}
 </div>
 
-{% assign post = {{page}} %}
+{% assign post = page %}
 {% include previous_posts.html %}
 {% include comments.html %}
