--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ comments: True
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date">{{ page.date | date: "%Y-%m-%d" }}</span>
   {{ content }}
 </div>
 
