--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/lanyon.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/custom.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/public/font-awesome-4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/font-pt/css/fonts.css">
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
